--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/chico.png" />
+    <link rel="icon" type="image/svg+xml" href="/logoChico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro de personas</title>
+    <title>TERA registro</title>
   </head>
   <body>
     <div id="root"></div>
